strong update to node build/check.js - cycle

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Helvetic Neue", Helvetica, Arial;
 }
 
-h1 {
+h1, h3 {
     text-align: center;
 }
 
@@ -12,30 +12,18 @@ li {
 }
 
 li a {
-    float: right;
     text-decoration: none;
-    color: grey;
 }
 
 li a:hover {
-    color: black;
     text-decoration: underline;
 }
 
-li.status-maybe-error {
+li.status-maybe-error a {
     color: red;
 }
 
-li.status-maybe-error a {
-    color: black;
-    font-weight: bold;
-}
-
-li.status-maybe-error.status-200 {
-    color: green;
-}
 
 li.status-maybe-error.status-200 a {
-    color: grey;
-    font-weight: normal;
+    color: green;
 }
